<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/bitcoin_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/bitcoin_donate"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/bitcoin_address"
        android:textSize="15sp"
        android:textIsSelectable="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/litecoin_donate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="51dp"
        android:gravity="center"
        android:text="@string/litecoin_donate"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/litecoin_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/litecoin_donate"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="@string/litecoin_address"
        android:textSize="15sp"
        android:textIsSelectable="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/bitcoin_donate"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/litecoin_address"
        android:layout_marginTop="54dp"
        android:gravity="center"
        android:text="@string/bitcoin_donate"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignTop="@+id/TextView01"
        android:layout_marginTop="35dp"
        android:gravity="center"
        android:text="-tyrick"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="99dp"
        android:gravity="center"
        android:text="Thank You!"
        android:textSize="20sp"
        android:textStyle="bold" />

</RelativeLayout>